# vapoursynth-mvtools-fork

./: meson.build  readme.rst
msvc/: MVTools.vcxproj
src/: DCTFFTW.cpp  MVAnalyse.cpp  MVDegrains.cpp  MVMask.cpp  MVRecalculate.cpp  MaskFun.cpp  MaskFun.h  Overlap.cpp  SADFunctions.cpp  SimpleResize.cpp  SimpleResize.h
